# mira

./: .dockerignore  .env.example  .gitignore  .mira.yaml.example  .mira.yml.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  README.md  SECURITY.md  fly.toml  pyproject.toml  railway.toml  render.yaml  report.txt  sample_review.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  evals.yml  release-beta.yml  release.yml
scripts/: local_setup.sh  play_learning.py  seed_contributors.py  seed_demo.py  start_local.sh
src/mira/: __init__.py  cli.py  config.py  exceptions.py  models.py
tests/: conftest.py  test_activity.py  test_activity_detail.py  test_admin_authz.py  test_admin_settings.py  test_api_routes.py  test_api_version.py  test_auth_middleware_public_paths.py  test_bedrock_provider.py  test_chunker.py  test_cli.py  test_codex_cli_provider.py  test_config.py  test_context.py  test_contributor_backfill.py  test_contributors_db.py  test_conversation_prompt.py  test_count_files_for_repos.py  test_decision_archaeology.py  test_default_admin.py  test_diff_parser.py  test_engine.py  test_ensemble.py  test_file_filter.py  test_footguns.py  test_forgejo_webhooks.py  test_github_app_auth.py  test_github_provider.py  test_gitlab_webhooks.py  test_handlers.py  test_index_context.py  test_index_indexer.py  test_index_store.py  test_index_webhooks.py  test_indexing_cancel.py  test_integration.py  test_jit_context.py  test_learned_rules_api.py  test_learnings_approval.py  test_llm_provider.py  (+30 more)
tests/evals/: test_eval_learning.py  test_eval_llm.py  test_eval_overlap.py  test_eval_relationships.py  test_eval_thread_resolution.py
tests/fixtures/: fake_repo_auth_change.diff  fake_repo_multi_file.diff  fake_repo_payment_change.diff  sample.diff  sample_config.yml  sample_llm_response.json  (+1 more)
(+128 files in other folders)
